# rust-basic-api-2

./: .env.example  .env.test  .gitignore  .gitleaksignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  client-config.json  clippy.toml  coding-guidelines.md  cto-config.json  docker-compose.yml  docs-tool-discovery-findings.md  github-guidelines.md  lcov.info  morgan-tools-helm-test-results.md
.factory/: cli.json
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  docker-publish.yml  rust-ci.yml  yaml-lint.yml
docs/: requirements.yaml
docs/.taskmaster/: state.json
docs/.taskmaster/docs/task-1/: acceptance-criteria.md  prompt.md  task.md  task.txt  task.xml
docs/.taskmaster/docs/task-2/: task.txt  task.xml
docs/.taskmaster/docs/task-3/: acceptance-criteria.md  prompt.md  task.md  task.txt  task.xml
docs/.taskmaster/docs/task-4/: acceptance-criteria.md  prompt.md  task.md  task.txt  task.xml
docs/.taskmaster/docs/task-5/: acceptance-criteria.md  prompt.md  task.md  task.txt  task.xml
docs/.taskmaster/docs/task-6/: acceptance-criteria.md  prompt.md  task.md  task.txt  task.xml
docs/.taskmaster/docs/task-7/: acceptance-criteria.md  prompt.md  task.md  task.xml
docs/.taskmaster/docs/task-8/: acceptance-criteria.md  prompt.md  task.md  task.xml
docs/.taskmaster/tasks/: task_007_rust-basic-api.txt  task_008_rust-basic-api.txt  tasks.json
migrations/: 001_initial_schema.sql
rust-basic-api/: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  build.rs  clippy.toml  docker-compose.yml  env.template
rust-basic-api/migrations/: 001_initial_schema.sql  002_adjust_updated_at_trigger.sql  20241010000001_initial_schema.sql
rust-basic-api/src/: app.rs  application.rs  config.rs  error.rs  lib.rs  main.rs  test_support.rs
rust-basic-api/src/models/: mod.rs
rust-basic-api/src/repository/: mod.rs  test_utils.rs
rust-basic-api/src/routes/: health.rs  mod.rs
rust-basic-api/tests/: app_startup_test.rs  config_test.rs  database_integration.rs  database_pool_test.rs  error_coverage_test.rs  error_test.rs  health_check.rs  integration_test.rs  main_coverage_test.rs  main_test.rs  routes_coverage_test.rs  routes_test.rs
src/: config.rs  error.rs  error_tests.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  state.rs
src/models/: mod.rs
src/repository/: mod.rs  test_utils.rs
src/routes/: mod.rs
task/: acceptance-criteria.md  architecture.md  prompt.md  rex-handoff.md  task.md  task.xml
tests/: database_integration.rs  integration_test.rs  integration_tests.rs
