[package]
name = "rust-basic-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["macros"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "0.14"

[dev-dependencies]
serial_test = "2"
tower = { version = "0.4", default-features = false, features = ["util"] }
