[package]
name = "rust-basic-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_basic_api"
path = "src/lib.rs"

[[bin]]
name = "rust-basic-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.4"
hyper = "0.14"
serial_test = "3.0"
libc = "0.2"
